src/sass/base.scss
/* ... */
.article-category-button-active {
    color: color(primary-blue);
    display: inline-block;
    border: none;
    font-size: 15px;
    letter-spacing: 1px;
    background: none;
    padding: 0;
    font-weight: 700;
    cursor: pointer;
    
    &:focus,
    &:active {
        outline: none;
        color: color(primary-blue);
    }
}

.article-sidebar {
    width: 300px;
    border-right: 1px solid color(hr-line);
    margin: 10px 0;

    hr {
        margin-left: 20px;
        width: 86%;
        margin-bottom: 30px;
        margin-top: 30px;
    }
}

.sidebar-article-link-active {
    border-left: 2px solid color(primary-yellow);
    display: block;
    // box-sizing: content-box;
    margin-left: 2px;
    padding-left: 3px;
    text-decoration: none;
    line-height: 2em;
    font-size: 12px;
    position: relative;
    letter-spacing: .7px;
    color: color(primary-blue);
}

.sidebar-article-link {
    display: block;
    // box-sizing: content-box;
    margin-left: 2px;
    padding-left: 3px;
    text-decoration: none;
    line-height: 2em;
    font-size: 12px;
    position: relative;
    letter-spacing: .7px;
    color: color(primary-blue);

    &:visited,
    &:active,
    &:hover {
        color: color(primary-blue);
        text-decoration: underline;
    }
}

.view-article-container {
    display: flex;
    height: 80vh;
    margin-bottom: 50px;

    .article-view-main {
        width: 600px;
        // justify-self: center;
        margin: 10px auto;
        justify-content: flex-start;
    }
}

/**********************************************************
    ARTICLE VIEW
***********************************************************/

.article-view-wrapper{
    justify-self: flex-start;
    align-self: flex-start;
    align-items: flex-start;

    hr {
        margin: 6px 0 12px;
        background: color(primary-yellow);
        // width: 26%;
        width: 102px;
    }

    .article-title {
        font-size: 20px;
        color: color(primary-blue);
    }

    .article-into {
        margin-bottom: 30px;
        font-size: 15px;
        font-weight: 300;
        color: color(primary-blue);
    }

    .article-step-button {
        text-decoration: underline;
        text-align: left;
        font-family: Arial;
        color: color(primary-blue);
        display: inline-block;
        border: none;
        font-size: 13px;
        letter-spacing: .8px;
        background: none;
        padding: 0;
        // font-weight: 700;

        &:focus,
        &:active {
            outline: none;
        }
    }

    ol {
        padding-left: 20px;
        // line-height: 1.8em;
        
        li {
            margin-bottom: 15px;
            list-style-type: circle;
            font-size: 13px;

            &:nth-last-child(1) {
                margin-bottom: 30px;
            }
        }
    }
}

.article-step {
    color: color(primary-blue);
    font-size: 13px;
    letter-spacing: .8px;
}

/**********************************************************
    IMAGE LOADER
***********************************************************/

.backdrop {
    position: fixed;
    width:100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.3);
    z-index: 100;
    top: 0;
    left: 0;
}

.loaded-image {
    z-index: 200;
    position: absolute;
    top: 30%;
    text-align: center;
}

/**********************************************************
    QUERIES
***********************************************************/
.show {
    display: block;
    margin-top: 3px; 
}

.hide {
    display: none;
}

@media (min-width: 992px) {
    section {
        max-width: 992px;
    }
}

@media (min-width: 720px) {
    .article-category-container {
        min-width: 918px;
    } 

}

@media (max-width: 1040px) {
    #article-view-main {
        margin: 10px 30px;
    }

    .image-container {
        left: 30vw;
    }

}

@media (max-width: 576px) {
    #article-category-container {
        flex-flow: column wrap;
        max-width: 350px;
        margin-left: 3vw;
    }

    .helper-section {
        max-width: 350px;

        img {
            max-width: 350px;
        }
    }

    .view-article-container {
        flex-wrap: wrap-reverse;

        .article-view-main {
            width: 300px;
            border-bottom: 1px solid color(hr-line);
        }

        .article-sidebar {
            border: none;
            margin-left: 30px;
        }
    }

    #article-view-main {
        margin: 10px 50px;
    }

    .article-sidebar {

        hr {
            margin-left: 20px;
            width: 99%;
        }
    }
}


/**********************************************************
    TEST
***********************************************************/

